--- a/tex/manuscript.tex
+++ b/tex/manuscript.tex
@@ -22,7 +22,7 @@
 
 \begin{frontmatter}
 % title
-\title{Temporal Variations In Vapor Intrusion-Induced Indoor Air Contaminant Concentrations}
+\title{Factors Affecting Temporal Variations In Vapor Intrusion-Induced Indoor Air Contaminant Concentrations}
 
 % authors
 \author[Brown]{Jonathan G. V. Ström}
@@ -233,7 +233,7 @@ The key working equations and the boundary conditions are summarized in Table \r
      & \multicolumn{1}{c}{300} & 15 & 0.5 \\
     \bottomrule
   \end{tabular}
-  \caption{Governing equations, boundary conditions \& model input parameters. (See below for table of nomenclature).}\label{tbl:eqns_bc_parameters}
+  \caption{Governing equations, boundary conditions \& model input parameters. See Table \ref{tbl:abbreviations} for nomenclature.}\label{tbl:eqns_bc_parameters}
 \end{table}
 
 \newpage
@@ -508,14 +508,24 @@ At sites where advective transport into the structure is limited, much of the te
 
 \section{Conclusions}
 
-Based on the statistical analysis of the field data presented, as well as the modeling efforts the following conclusions may be drawn.
-\begin{itemize}
-  \item Indoor air contaminant concentrations are unlikely to vary by more than a factor of three over a week-long period if the site is not characterized by a preferential pathway, such as the one found at the ASU house site; else more than an order magnitude variability within the same period may be expected.
-  \item Preferential pathways can cause significant spatial variability in the subslab. Subsequently, subslab vapor samples may reveal that the attenuation from subslab may significantly exceed the EPA recommended value of 0.03 and even exceed unity - potentially leading to the erroneous conclusion that an indoor source is present.
-  \item Preferential pathways such as the one found at the ASU house significantly increase the advective transport potential through the foundation breaches at a site. This relies on effective communication between the indoor air space and the preferential pathway, e.g. a permeable subslab region (gravel layer) must exist.
-  \item Sites characterized by significant advective potential, such as North Island NAS or the ASU house with the preferential pathway open, most of the short-term indoor air contaminant concentration variability may be attributed to fluctuations in indoor/outdoor pressure difference; at sites where the advective potential is low, e.g. ASU house with the preferential pathway closed, short-term variability is dominated by fluctuations in air exchange rate.
-\end{itemize}
+Based on statistical analysis of field data from vapor intrusion sites showing significant temporal variations in indoor air contaminant concentrations, supplemented by computational fluid dynamics modeling, it is concluded that several different factors can play a role in determining these variations.\par
 
+There can be a significant role of advective transport in determining observed variability.
+For advective transport to play a decisive role, the present results show that there must exist a sub-foundation zone that permits significant flow of soil gas.
+In the case of NAS North Island, a relatively permeable sub-foundation soil permitted fairly high variations in building indoor pressure to cause significant fluctuations in contaminant entry rate.
+In the case of the ASU house, a permeable gravel sub-base allowed good communication of the indoor air environment with the contents of a preferential contaminant pathway that entered that sub-base, even though the pressure driving force was not nearly as large as that at NAS North Island.
+Both situations led to well-documented large variations (two or three orders of magnitude) in indoor air contaminant concentrations.
+
+Modeling work has shown that the existence of preferential pathways that communicate with a permeable sub-slab zone can create significant spatial variability in contaminant concentration in the subslab.
+In other words, the existence of a permeable sub-slab layer (such as gravel) does not assure that there will exist a well-mixed sub-slab zone.
+This warns that taking isolated subslab vapor samples may be misleading, as a result of spatial variability of contaminant concentrations.
+This might in turn lead to apparent attenuation from the sub-slab to indoors that appears to exceed the EPA recommended value of 0.03 and even exceed unity - potentially leading to the erroneous conclusion that an indoor source is present.\par
+
+In the absence of a preferential pathway (a situation that existed at the ASU house when the pathway was closed off) and in the presence of only a modest observed pressure driving force, there was still observed a significant temporal variation in indoor air contaminant concentration of around an order of magnitude.
+Statistical analysis of that data set showed, however, that indoor air contaminant concentrations were actually unlikely to vary by more than a factor of three over a week-long or shorter sampling period.
+The small variability that was seen over these short times could be explained by inherent variability in air exchange rates.
+It was when indoor air samples taken over longer periods were compared that an almost order of magnitude variation became apparent.
+These results were consistent with seasonal timescale variations in the intrusion processes.\par
 
 \section*{Acknowledgements}
 This project was supported by grant ES-201502 from the Strategic Environmental Research and Development Program and Environmental Security Technology Certification Program (SERDP-ESTCP).
