--- a/tex/cover-letter/cover_letter.tex
+++ b/tex/cover-letter/cover_letter.tex
@@ -1,6 +1,7 @@
 \documentclass{letter}
 \usepackage{hyperref}
 \usepackage[utf8]{inputenc}
+\usepackage[textwidth=6in,textheight=14in]{geometry}
 \signature{Jonathan Ström}
 \address{School of Engineering \\ Brown University \\ Providence 02912}
 \begin{document}
@@ -8,8 +9,9 @@
 \begin{letter}{Editorial Department of Building and Environment}
 \opening{Dear Sir or Madam:}
 
-I am pleased to submit this manuscript entitled "Temporal Variations In Vapor Intrusion-Induced Indoor Air Contaminant Concentrations" for review and possible publication in Building and Environment.
-This is original work, and has not been previously published by any other journal or conference proceedings.
+I am pleased to submit this manuscript entitled "Factors Affecting Temporal Variations In Vapor Intrusion-Induced Indoor Air Contaminant Concentrations" for review and possible publication in Building and Environment.
+This is original work and has not been previously published by any other journal or conference proceedings; the submission declaration has been complied with.
+We have no interests to declare. 
 
 Using numerical models and published field data from three vapor intrusion (VI) sites, we explore the causes of the temporal variation in indoor air contaminant concentrations in VI impacted houses, a poorly understood phenomena.
 We especially investigate the role of preferential contaminant pathways have in VI, and how air exchange rates contribute to variability in indoor air contaminant concentration.
@@ -17,9 +19,9 @@ We especially investigate the role of preferential contaminant pathways have in 
 Some of our conclusions that we believe contribute to the state-of-the-art:
 \begin{itemize}
   \item Preferential pathways may lead to the false conclusion that there are indoor sources present at a VI site.
-  \item Preferential pathways can dramatically increase a VI site's sensitivity to building pressurization.
-  \item Air exchange rate is poorly correlated with normal range of building pressurization and may significantly contribute to indoor contaminant variability.
-  \item Indoor contaminant concentration vary roughly by up to a factor of two across a few days; up to an order magnitude variation may be expected over a week.
+  \item Preferential pathways can dramatically increase the role of advective transport, provided there is a permeable subslab region to facilitate this.
+  \item At VI sites where advective transport potential is high, much of the observed variation may be attributed to fluctuations in building pressurization; where this potential is much lower, fluctations in air exchange rate may significantly contribute to indoor contaminant variability.
+  \item In the absence of a preferential pathway, indoor contaminant concentration vary roughly by up to a factor of three across a few days; up to an order magnitude variation may be expected over a week.
 \end{itemize}
 We expect the topics explored and conclusions reached in our work will be of great interest to your readership.
 
