--- a/tex/manuscript.tex
+++ b/tex/manuscript.tex
@@ -50,6 +50,8 @@ Meanwhile, air exchange rate variation drives most of the short-term variability
   Vapor intrusion \sep Preferential pathways \sep Temporal variability \sep Attenuation factor \sep Air exchange rate \sep Indoor/outdoor pressure difference
 \end{keyword}
 
+
+
 \end{frontmatter}
 
 \section{Introduction}\label{s:intro}
@@ -528,7 +530,9 @@ It was when indoor air samples taken over longer periods were compared that an a
 These results were consistent with seasonal timescale variations in the intrusion processes.\par
 
 \section*{Acknowledgements}
-This project was supported by grant ES-201502 from the Strategic Environmental Research and Development Program and Environmental Security Technology Certification Program (SERDP-ESTCP).
+This project was supported by grant ES-201502 from the Strategic Environmental Research and Development Program and Environmental Security Technology Certification Program (SERDP-ESTCP).\par
+
+Declaration of interest: none
 
 \clearpage
 \begin{table}[htb!]
@@ -589,7 +593,7 @@ This project was supported by grant ES-201502 from the Strategic Environmental R
   \caption{List of abbreviations and nomenclature}\label{tbl:abbreviations}
 \end{table}
 
-\bibliographystyle{model1-num-names}
+\bibliographystyle{elsarticle-num}
 \bibliography{library}
 
 \end{document}
