Added practical implications notes.

--- a/tex/manuscript.tex
+++ b/tex/manuscript.tex
@@ -529,6 +529,22 @@ The small variability that was seen over these short times could be explained by
 It was when indoor air samples taken over longer periods were compared that an almost order of magnitude variation became apparent.
 These results were consistent with seasonal timescale variations in the intrusion processes.\par
 
+% PRACTICAL IMPLICATIONS (WEAVE THESE INTO THE TEXT SOMEHOW)
+- 24 hr sampling is recommended for a few reasons.
+1. Avoids issues with diurnal fluctations in Ae or dP.
+2. Variation of a few factors is expected over 24 hrs, while not much else in subsequent days. Thus most short-term variability may be captured in this timeperiod.
+- If you are more than (say an order of magnitude) from some regulatory limit in a 24 hr sample, additional sampling at a later date may not be necessary.
+- Passive samples can help capture some of the more longterm variations if these are a concern.
+- Use manometers to determine dP, if these are relatively large, and if the structure is relatively leaky/the soil is quite permeable, more significant flucations in IACC may be to expected and a "tighter" sampling scheme may be warranted. Of course PP may make even small dP cause significant changes in IACC (which should be screened for).
+- PPs should be screened for. Danish study has strategies for this, as well as Pennell. Sampling nearby manholes recommended as these are likely pathways.
+- Subslab samples may be missleading. At ASU we saw that alpha > 1 existed, which shows that:
+1. Even with "good" subslab sampling, hotspots are easily missed.
+2. May mislead that an indoor source is present.
+3. Even without a PP there may still be significant spatial variability (Eklund).
+4. Holton's tracer study shows that the indoor itself may cause persistent plumes (especially in the deep subslab area).
+5. McAlary said something about this. Look it up.
+6. May not really be worth the effort. 
+
 \section*{Acknowledgements}
 This project was supported by grant ES-201502 from the Strategic Environmental Research and Development Program and Environmental Security Technology Certification Program (SERDP-ESTCP).\par
 
