--- a/tex/manuscript.tex
+++ b/tex/manuscript.tex
@@ -516,12 +516,25 @@ There can be a significant role of advective transport in determining observed v
 For advective transport to play a decisive role, the present results show that there must exist a sub-foundation zone that permits significant flow of soil gas.
 In the case of NAS North Island, a relatively permeable sub-foundation soil permitted fairly high variations in building indoor pressure to cause significant fluctuations in contaminant entry rate.
 In the case of the ASU house, a permeable gravel sub-base allowed good communication of the indoor air environment with the contents of a preferential contaminant pathway that entered that sub-base, even though the pressure driving force was not nearly as large as that at NAS North Island.
-Both situations led to well-documented large variations (two or three orders of magnitude) in indoor air contaminant concentrations.
+Both situations led to well-documented large variations (two or three orders of magnitude) in indoor air contaminant concentrations.\par
+
+These findings, as well as those from others reaffirm that screening for preferential pathways should be a routine part of VI investigations.
+Sewers have been shown to play significant roles as preferential pathways and sampling nearby manholes for the presence for contaminants is a simple way to determine if a preferential pathway may play a role at the site.
+Similar and other suggested screening methods have been described by Nielsen et al.\cite{nielsen_remediation_2017}, Pennell et al.\cite{pennell_sewer_2013}, and McHugh et al.\cite{mchugh_evidence_2017}.\par
+
+Even in the absence of a preferential pathway, monitoring the indoor/outdoor pressure difference at a site may be we wise.
+As was observed at North Island NAS, the significant fluctuations in pressurization lead to significant fluctuations in indoor air contaminant concentrations.
+Knowing how the pressurization fluctuates may help inform how much temporal variability one may expect at a VI site; larger fluctuations combined with relatively permeable soils and/or leaky buildings lead to more significant temporal variability in indoor air contaminant concentrations, requiring indoor samples to be taken with a finer time-resolution than usual.
+Under these circumstances, there may be need for continuous monitoring of indoor air contaminant concentration.\par
 
 Modeling work has shown that the existence of preferential pathways that communicate with a permeable sub-slab zone can create significant spatial variability in contaminant concentration in the subslab.
 In other words, the existence of a permeable sub-slab layer (such as gravel) does not assure that there will exist a well-mixed sub-slab zone.
 This warns that taking isolated subslab vapor samples may be misleading, as a result of spatial variability of contaminant concentrations.
 This might in turn lead to apparent attenuation from the sub-slab to indoors that appears to exceed the EPA recommended value of 0.03 and even exceed unity - potentially leading to the erroneous conclusion that an indoor source is present.\par
+
+This adds to the concerns of overly relying on subslab contaminant samples in VI investigations due to the significant spatial variability of vapor contaminants at VI site like the ASU house and others\cite{chow_concentration_2007,folkes_observed_2009,u.s._environmental_protection_agency_assessment_2015}.
+This is further complicated by the fact that the building itself can influence the subslab and create plumes of contaminant vapor\cite{holton_creation_2018}.
+Collecting subslab samples can yield important information, but site investigators should be aware of the potential issues and ask themselves if it is worth the effort to collect these samples.\par
 
 In the absence of a preferential pathway (a situation that existed at the ASU house when the pathway was closed off) and in the presence of only a modest observed pressure driving force, there was still observed a significant temporal variation in indoor air contaminant concentration of around an order of magnitude.
 Statistical analysis of that data set showed, however, that indoor air contaminant concentrations were actually unlikely to vary by more than a factor of three over a week-long or shorter sampling period.
@@ -529,6 +542,13 @@ The small variability that was seen over these short times could be explained by
 It was when indoor air samples taken over longer periods were compared that an almost order of magnitude variation became apparent.
 These results were consistent with seasonal timescale variations in the intrusion processes.\par
 
+This suggests that 24-hour indoor air samples may be the most appropriate choice of sample collection time, avoiding diurnal concerns as well as capturing the variability of a few factors over a day.
+Samples collected over longer time-periods, i.e. 48- or 72-hours, are unlikely to yield a different concentration than a 24-hour samples.
+For the same reason, multiple samples should be spaced several days or few weeks apart to avoid duplicate samples.
+Passive samples could be a cost effective way in conjunction with 24-hour samples to understand the long-term indoor air contaminant concentration trends.
+The analysis in Figure \ref{fig:resampling} also implies that if a 24-hour sample gives a indoor air contaminant concentration that deceeds some regulatory limit by an order of magnitude or more, it is unlikely that the indoor air contaminant concentration will exceed this value at a later date; further sampling may not be necessary.\par
+
+\begin{comment}
 % PRACTICAL IMPLICATIONS (WEAVE THESE INTO THE TEXT SOMEHOW)
 - 24 hr sampling is recommended for a few reasons.
 1. Avoids issues with diurnal fluctations in Ae or dP.
@@ -543,7 +563,9 @@ These results were consistent with seasonal timescale variations in the intrusio
 3. Even without a PP there may still be significant spatial variability (Eklund).
 4. Holton's tracer study shows that the indoor itself may cause persistent plumes (especially in the deep subslab area).
 5. McAlary said something about this. Look it up.
-6. May not really be worth the effort. 
+6. May not really be worth the effort.
+\end{comment}
+
 
 \section*{Acknowledgements}
 This project was supported by grant ES-201502 from the Strategic Environmental Research and Development Program and Environmental Security Technology Certification Program (SERDP-ESTCP).\par
