Added Eric's edits

--- a/tex/library.bib
+++ b/tex/library.bib
@@ -304,6 +304,17 @@
   pages = {4792--4799}
 }
 
+@article{pennell_development_2009,
+  title = {Development and {{Application}} of a {{Three}}-{{Dimensional Finite Element Vapor Intrusion Model}}},
+  volume = {59},
+  number = {4},
+  journal = {Journal of the Air \& Waste Management Association},
+  doi = {10/fb9p72},
+  author = {Pennell, Kelly G. and Bozkurt, Ozgur and Suuberg, Eric M.},
+  year = {2009},
+  pages = {447--460}
+}
+
 @article{holton_creation_2018,
   title = {Creation of a {{Sub}}-Slab {{Soil Gas Cloud}} by an {{Indoor Air Source}} and {{Its Dissipation Following Source Removal}}},
   issn = {0013-936X, 1520-5851},
