--- a/tex/manuscript.tex
+++ b/tex/manuscript.tex
@@ -510,43 +510,41 @@ At sites where advective transport into the structure is limited, much of the te
 
 \section{Conclusions}
 
-Based on statistical analysis of field data from vapor intrusion sites showing significant temporal variations in indoor air contaminant concentrations, supplemented by computational fluid dynamics modeling, it is concluded that several different factors can play a role in determining these variations.\par
-
+Based on statistical analysis of field data from vapor intrusion sites showing significant temporal variations in indoor air contaminant concentrations, supplemented by computational fluid dynamics modeling, it is concluded that several different factors can play a role in determining these variations.
 There can be a significant role of advective transport in determining observed variability.
 For advective transport to play a decisive role, the present results show that there must exist a sub-foundation zone that permits significant flow of soil gas.
 In the case of NAS North Island, a relatively permeable sub-foundation soil permitted fairly high variations in building indoor pressure to cause significant fluctuations in contaminant entry rate.
-In the case of the ASU house, a permeable gravel sub-base allowed good communication of the indoor air environment with the contents of a preferential contaminant pathway that entered that sub-base, even though the pressure driving force was not nearly as large as that at NAS North Island.
-Both situations led to well-documented large variations (two or three orders of magnitude) in indoor air contaminant concentrations.\par
+In the case of the ASU house, a permeable gravel sub-base allowed good communication of the indoor air environment with the contents of a preferential contaminant pathway that entered that sub-base, even though the pressure driving force was not nearly as large as that at NAS North Island.
+Both situations led to well-documented large variations (two or three orders of magnitude) in indoor air contaminant concentrations.\par
 
 These findings, as well as those from others reaffirm that screening for preferential pathways should be a routine part of VI investigations.
-Sewers have been shown to play significant roles as preferential pathways and sampling nearby manholes for the presence for contaminants is a simple way to determine if a preferential pathway may play a role at the site.
-Similar and other suggested screening methods have been described by Nielsen et al.\cite{nielsen_remediation_2017}, Pennell et al.\cite{pennell_sewer_2013}, and McHugh et al.\cite{mchugh_evidence_2017}.\par
+Sewers have been shown in several studies to play significant roles as potential preferential pathways.
+Thus, sampling nearby manholes for the presence for contaminants appears prudent in terms of establishing whether such a preferential pathway may play a role at a site.
+This is consistent with what has been suggested by Nielsen et al.\cite{nielsen_remediation_2017}, Pennell et al.\cite{pennell_sewer_2013}, and McHugh et al.\cite{mchugh_evidence_2017}.\par
 
-Even in the absence of a preferential pathway, monitoring indoor/outdoor pressure differences at a site may be we wise.
-As was observed at North Island NAS, the significant fluctuations in pressurization lead to significant fluctuations in indoor air contaminant concentrations.
-Knowing how the pressurization fluctuates may help inform how much temporal variability one may expect at a VI site; larger fluctuations combined with relatively permeable soils and/or leaky buildings lead to more significant temporal variability in indoor air contaminant concentrations, requiring indoor samples to be taken with a finer time-resolution than usual.
-Under these circumstances, there may be need for continuous monitoring of indoor air contaminant concentration.\par
+Even in the absence of a preferential pathway, the present results suggest that some temporal monitoring of indoor/outdoor pressure differences can provide insights regarding whether an unusually large advective driving force for contaminant entry exists.
+As was observed at NAS North Island, significant fluctuations in pressure driving force was what lead to significant temporal fluctuations in indoor air contaminant concentrations.
+Generally speaking, larger pressure fluctuations on sites with relatively permeable soils and/or leaky buildings would be expected to lead to more significant short-term temporal variability in indoor air contaminant concentrations, suggesting monitoring that can track such variations.\par
 
-Modeling work has shown that the existence of preferential pathways that communicate with a permeable sub-slab zone can create significant spatial variability in contaminant concentration in the subslab.
-In other words, the existence of a permeable sub-slab layer (such as gravel) does not assure that there will exist a well-mixed sub-slab zone.
-This warns that taking isolated subslab vapor samples may be misleading, as a result of spatial variability of contaminant concentrations.
-This might in turn lead to apparent attenuation from the sub-slab to indoors that appears to exceed the EPA recommended value of 0.03 and even exceed unity - potentially leading to the erroneous conclusion that an indoor source is present.\par
+Modeling work has shown that the existence of preferential pathways that transport contaminant to a permeable sub-slab zone can lead to significant spatial variability in contaminant concentration in the subslab, even if the subslab is reasonably permeable (such as a gravel sub-base).
+The presumption of a well-mixed sub-base is unlikely to be appropriate in the presence of a preferential pathway into the sub-base.
+This warns that taking spatially limited subslab vapor samples may provide a misleading picture of the potential for contaminant entry.
+Such limited sampling in such situations could even lead to apparent to apparent subslab to indoor air attenuation factors exceeding the typical EPA recommended value of 0.03 (and they can even exceed unity, potentially leading to an erroneous conclusion that an indoor source is present).
+This is in addition to other warnings that have been previously presented regarding over-reliance on subslab samples in VI investigations\cite{chow_concentration_2007,folkes_observed_2009,u.s._environmental_protection_agency_assessment_2015,pennell_development_2009}.
+The fact that the building itself can influence the subslab contaminant concentrations has also been the subject of caution\cite{holton_creation_2018}.
+Thus, the list of reasons for exercising caution in relying upon subslab vapor measurements continues to grow.\par
 
-This adds to the concerns of overly relying on subslab contaminant samples in VI investigations due to the significant spatial variability of vapor contaminants at VI site like the ASU house and others\cite{chow_concentration_2007,folkes_observed_2009,u.s._environmental_protection_agency_assessment_2015}.
-This is further complicated by the fact that the building itself can influence the subslab and create plumes of contaminant vapor\cite{holton_creation_2018}.
-Collecting subslab samples can yield important information, but site investigators should be aware of the potential issues and ask themselves if it is worth the effort to collect these samples.\par
-
-In the absence of a preferential pathway (a situation that existed at the ASU house when the pathway was closed off) and in the presence of only a modest observed pressure driving force, there was still observed a significant temporal variation in indoor air contaminant concentration of around an order of magnitude.
-Statistical analysis of that data set showed, however, that indoor air contaminant concentrations were actually unlikely to vary by more than a factor of three over a week-long or shorter sampling period.
-The small variability that was seen over these short times could be explained by inherent variability in air exchange rates.
+In the absence of a preferential pathway (a situation that existed at the ASU house when the pathway was closed off) and in the presence of the observed modest stack effect pressure driving force, a temporal variation in indoor air contaminant concentration of roughly an order of magnitude was still observed.
+Statistical analysis of that dataset showed, however, that indoor air contaminant concentrations were actually unlikely to vary by more than a factor of three over a week-long or shorter sampling period.
+The small variability that was seen over these short times could be explained by the inherent variability in air exchange rates.
 It was when indoor air samples taken over longer periods were compared that an almost order of magnitude variation became apparent.
-These results were consistent with seasonal timescale variations in the intrusion processes.\par
+These results were consistent with seasonal timescale variations in the intrusion processes.
+The above results suggest that 24-hour indoor air sampling may be appropriate for capturing the variability that actually exists over the timescale of days. Considering sampling over longer time-periods, i.e. 48- or 72-hours, the results seemed to indicate that they would not give different concentration than a 24-hour sample.
+For the same reason, multiple rounds of sampling over the time period of a few days or weeks cannot normally be expected to reveal significant differences, unless one is dealing with a preferential pathway situation which can lead to variations on shorter timescales.\par
 
-This suggests that 24-hour indoor air samples may be the most appropriate choice of sample collection time, avoiding diurnal concerns as well as capturing the variability of a few factors over a day.
-Samples collected over longer time-periods, i.e. 48- or 72-hours, are unlikely to yield a different concentration than a 24-hour samples.
-For the same reason, multiple samples should be spaced several days or few weeks apart to avoid duplicate samples.
-Passive samples could be a cost effective way in conjunction with 24-hour samples to understand the long-term indoor air contaminant concentration trends.
-The analysis in Figure \ref{fig:resampling} also implies that if a 24-hour sample gives a indoor air contaminant concentration that deceeds some regulatory limit by an order of magnitude or more, it is unlikely that the indoor air contaminant concentration will exceed this value at a later date; further sampling may not be necessary.\par
+The analysis in Figure \ref{fig:resampling} also implies that if a 24-hour sample gives an indoor air contaminant concentration that is an order of magnitude lower than a relevant regulatory limit, it is unlikely that the indoor air contaminant concentration will exceed this value at a later date unless there exists a preferential pathway whose contribution varies significantly with time.\par
+
+
 
 \begin{comment}
 % PRACTICAL IMPLICATIONS (WEAVE THESE INTO THE TEXT SOMEHOW)
