Added new highlights

--- a/tex/highlights/highlights.tex
+++ b/tex/highlights/highlights.tex
@@ -12,3 +12,10 @@
   \item In the absence of a preferential pathway, indoor contaminant concentration vary roughly by up to a factor of three across a few days; up to an order magnitude variation may be expected over a week.
 \end{itemize}
 \end{document}
+
+
+Preferential pathways may lead to the false conclusion that there are indoor sources present at a VI site.
+Indoor concentrations vary roughly by a factor of three over a few days; up to an order of magnitude over a week.
+Preferential pathways can dramatically increase the role of advective transport, provided there is a permeable subslab zone.
+At sites with high advective transport potential, fluctuations in pressurization cause much of the observed variability.
+Air exchange rate fluctuations significantly contribute with variability at sites with low advective transport potential.
